my first commit

--- a/features.html
+++ b/features.html
@@ -15,7 +15,7 @@
 		4. Share you Ad in Social Networks <br>
 		5. Instant chat to buyer or seller (Registered users) <br>
 		6. Ad Verification <br>
-                7. Post shops <br>
+                7. Post new shops <br>
 		<br><br>
 		<b>
 		In - Future
